--- a/Random_Forests_Solutions.ipynb
+++ b/Random_Forests_Solutions.ipynb
@@ -196,7 +196,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 453
+          "height": 419
         },
         "id": "1T5qHqoYWzIl",
         "outputId": "291221e3-96c1-4d10-afe3-ef25ea4f33a9"
@@ -1201,7 +1201,8 @@
         "```\n",
         "# (The accuracy is jumping around between a few values because the ensembles are congregating a select few splits on datapoints. \n",
         "# This is similar to swing states/counties in elections because a significant portion of datapoints / states / counties are guaranteed to be classified a certain way. \n",
-        "# However there are a few datapoints which have features that will often fall upon the boundaries between classifications. One could think of Miami-Dade or Philadephia county, as examples of datapoints that swing between boundaries)\n"
+        "# However there are a few datapoints which have features that will often fall upon the boundaries between classifications. One could think of Miami-Dade or Philadephia county, as examples of datapoints that swing between boundaries)\n",
+        "```"
       ]
     },
     {
